--- a/indexV3_0.html
+++ b/indexV3_0.html
@@ -36,7 +36,7 @@ Integrantes:
 			<!-- Logo-->
 			<div class="col-12 col-md-4 logo_agile">
 				<h1>
-					<a href="INDEXV3_0.html">
+					<a href="indexV3_0.html">
 						<img src="images/Pape_Memories_13.png" width = "50%" alt=" ">
 					</a>
 				</h1>
