--- a/INDEXV3_0.html
+++ b/INDEXV3_0.html
@@ -191,7 +191,7 @@ Integrantes:
 									</ul>
 								</li>
 								<!--Carrito-->
-								<li class="active"><a class="nav-stylehead" href="Carrito.html">Carrito <span class="sr-only">(current)</span> </a></li>
+								<li class="active"><a class="nav-stylehead" href=carrito.html">Carrito <span class="sr-only">(current)</span> </a></li>
 								<!--MEMORIAS-->
 								<li class="dropdown"><a class="nav-stylehead dropdown-toggle" href="memorias.html " data-toggle="dropdown">Memorias<b class="caret"></b></a>
 									<ul class="dropdown-menu agile_short_dropdown">
